# mycast

./: .gitignore  README.md  SETUP.md  main.py  pyproject.toml
agent-instructions/: claude-routine-prompt.md
